--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
-.App {
+/* .App {
   text-align: center;
+} */
+.contactDetails {
+  align-items: center;
+  align-self: center;
 }
 
 .App-logo {
@@ -11,6 +15,12 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+i {
+  cursor: pointer;
+}
+.shashank {
+  cursor: pointer;
 }
 
 .App-header {
